deploy/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend
spec:
  parentRefs:
    - name: public
      namespace: istio-ingress
      sectionName: https
  hostnames:
    - "api.${DOMAIN_NAME}"
  rules:
    - backendRefs:
        - name: backend-service
          port: 3001
